--- a/TelemetryDevice/appsettings.json
+++ b/TelemetryDevice/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Networking":{
+    "Protocols": [ "udp" ],
+    "Interfaces": ["loopback"]
+  },
   "AllowedHosts": "*"
 }
