--- a/TelemetryDevice/TelemetryDevice.csproj
+++ b/TelemetryDevice/TelemetryDevice.csproj
@@ -11,4 +11,7 @@
     <PackageReference Include="SharpPcap" Version="6.3.1" />
     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="10.0.0-preview.6.25358.103" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Shared\Shared\Shared.csproj" />
+  </ItemGroup>
 </Project>
