fixed absolute directory singelrton

--- a/TelemetryDevice/appsettings.json
+++ b/TelemetryDevice/appsettings.json
@@ -9,5 +9,8 @@
     "Protocols": [ "udp" ],
     "Interfaces": [ "loopback" ]
   },
+  "ICD": {
+    "ICDFilePath": "../Shared.Shared/Files/ICD/"
+  },
   "AllowedHosts": "*"
 }
