change shard to class library

--- a/TelemetryDevice/appsettings.json
+++ b/TelemetryDevice/appsettings.json
@@ -10,7 +10,7 @@
     "Interfaces": [ "loopback" ]
   },
   "ICD": {
-    "ICDFilePath": "../Shared.Shared/Files/ICD/"
+    "ICDFilePath": "../Shared/Shared/Files/ICD/"
   },
   "AllowedHosts": "*"
 }
