base kafka di set up

--- a/TelemetryDevice/appsettings.json
+++ b/TelemetryDevice/appsettings.json
@@ -12,5 +12,8 @@
   "ICD": {
     "ICDFilePath": "../../Shared/Shared/Files/ICD/"
   },
+  "Kafka": {
+    "BootstrapServers": "localhost:9092"
+  },
   "AllowedHosts": "*"
 }
