--- a/TelemetryDevice/TelemetryDevices.csproj
+++ b/TelemetryDevice/TelemetryDevices.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Confluent.Kafka" Version="2.11.1" />
     <PackageReference Include="Kafka" Version="1.0.5814.23193" />
     <PackageReference Include="KafkaFlow" Version="4.0.1" />
     <PackageReference Include="KafkaFlow.LogHandler.Console" Version="4.0.1" />
