shared renamed to core

--- a/TelemetryDevice/appsettings.json
+++ b/TelemetryDevice/appsettings.json
@@ -10,7 +10,7 @@
     "Interfaces": [ "loopback" ]
   },
   "ICD": {
-    "ICDFilePath": "../../Shared/Shared/Files/ICD/"
+    "ICDFilePath": "../../Core/Core/Files/ICD/"
   },
   "Kafka": {
     "BootstrapServers": "localhost:9092"
