--- a/TelemetryDevice/TelemetryDevices.csproj
+++ b/TelemetryDevice/TelemetryDevices.csproj
@@ -22,6 +22,6 @@
 		<PackageReference Include="System.Threading.Tasks.Dataflow" Version="10.0.0-preview.6.25358.103" />
 	</ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Shared\Shared\Shared.csproj" />
+    <ProjectReference Include="..\..\Core\Core\Core.csproj" />
   </ItemGroup>
 </Project>
